[package]
name = "bse_ddlog_lib"
version = "0.1.0"
authors = ["coco <cornelius@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differential_datalog = {path = "../bse_tutorial/bse_ddlog/differential_datalog"}
bse = {path = "../bse_tutorial/bse_ddlog/"}
types = {path = "../bse_tutorial/bse_ddlog/types"}
value = {path = "../bse_tutorial/bse_ddlog/value"}